# HydroCode

./: .gitignore  CMakeLists.txt  README.md  Scalar3D.h  Scalar3D.it.h  main.cpp  test
Testing/: advDiffNLParams.txt  advDiffParams.txt  testSolverParams.txt
apps/sandbox/: main.cpp
apps/testSolver1/: main.cpp
apps/unitTests/: main.cpp
cmake/: FindFFTW.cmake.txt  FindNetCDF.cmake.txt
include/: Derivatives.h  FourierTransforms.h  HighOrderSolver.h  MathOps.h  Scalar1D.h  Scalar1D.it.h  Scalar2D.h  Scalar2D.it.h  Scalar3D.h  Scalar3D.it.h  TestSolver.h  TestSolver2.h  TestSuite.h  Transforms.h  ioNetCDF.h  variables.h
scripts/: build.sh  readNetCDF.py
src/: Derivatives.cpp  FourierTransforms.cpp  HighOrderSolver.cpp  MathOps.cpp  ReadParams.cpp  TestSolver.cpp  TestSolver2.cpp  TestSuite.cpp  Transforms.cpp  ioNetCDF.cpp
tests/: advDiffNLParams.txt  advDiffParams.txt  testSolverParams.txt
visualizeData/: readNetCDF.py
